--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -9,7 +9,7 @@
 	android:id="@+id/drawerLayout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:fitsSystemWindows="false"
+	android:fitsSystemWindows="true"
 	android:fadingEdgeLength="0sp"
 	>
 
@@ -18,9 +18,18 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="vertical"
-		/>
+		>
 
-    <com.google.android.material.navigation.NavigationView
+	<androidx.appcompat.widget.Toolbar
+		android:id="@+id/toolbar"
+		android:theme="@style/MainBibleActionBar"
+		android:layout_width="match_parent"
+		android:layout_height="?attr/actionBarSize"
+		android:elevation="4dp"
+		/>
+	</LinearLayout>
+
+	<com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
