--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -1,47 +1,121 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Main Bible view
+<?xml version="1.0" encoding="utf-8"?><!-- Main Bible view
  
  @author Martin Denham [mjdenham at gmail dot com]
 -->
-<androidx.drawerlayout.widget.DrawerLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/drawerLayout"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:fitsSystemWindows="true"
-	android:fadingEdgeLength="0sp"
-	>
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawerLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fadingEdgeLength="0sp"
+    android:fitsSystemWindows="true">
 
-	<LinearLayout
-		android:id="@+id/mainBibleView"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical"
-		>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-	<androidx.appcompat.widget.Toolbar
-		android:id="@+id/toolbar"
-		android:theme="@style/MainBibleActionBar"
-		android:layout_width="match_parent"
-		android:layout_height="?attr/actionBarSize"
-		android:elevation="4dp"
-		/>
-	</LinearLayout>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:elevation="4dp"
+            android:theme="@style/MainBibleActionBar">
 
-	<com.google.android.material.navigation.NavigationView
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true">
+
+                    <ImageButton
+                        android:id="@+id/homeButton"
+                        style="@style/Widget.AppCompat.ActionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:contentDescription="@string/menu"
+                        android:onClick="onHomeButtonClick"
+                        app:srcCompat="@drawable/ic_menu" />
+
+                    <LinearLayout
+                        android:id="@+id/pageTitleContainer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:layout_gravity="start|center_vertical"
+                        android:onClick="onPageTitleClick"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/pageTitle"
+                            style="@style/BibleTitle1" />
+
+                        <TextView
+                            android:id="@+id/documentTitle"
+                            style="@style/BibleTitle2" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true">
+
+                    <ImageButton
+                        android:id="@+id/strongsButton"
+                        style="@style/Widget.AppCompat.ActionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:contentDescription="@string/menu"
+                        android:onClick="onStrongsButtonClick"
+                        app:srcCompat="@drawable/ic_code_white_24dp" />
+
+                    <Button
+                        android:id="@+id/bibleButton"
+                        style="@style/Widget.AppCompat.ActionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:contentDescription="@string/menu"
+                        android:onClick="onBibleButtonClick"
+                        android:text="Bible" />
+
+                    <Button
+                        android:id="@+id/commentaryButton"
+                        style="@style/Widget.AppCompat.ActionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:contentDescription="@string/menu"
+                        android:onClick="onCommentaryButtonClick"
+                        android:text="Com" />
+
+                    <Button
+                        android:id="@+id/dictionaryButton"
+                        style="@style/Widget.AppCompat.ActionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:contentDescription="@string/menu"
+                        android:onClick="onDictionaryButtonClick"
+                        android:text="Dict" />
+                </LinearLayout>
+            </RelativeLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+        <LinearLayout
+            android:id="@+id/mainBibleView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" />
+
+
+    </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/main_bible_drawer_menu"
-        />
-
-		<!-- removed explicit view reference because this page could contain a MyNote view
-		 net.bible.android.view.activity.page.BibleView  
-			android:id="@+id/main_text" 
-		    android:layout_width="fill_parent" 
-		    android:layout_height="fill_parent"
-		/-->
+        app:menu="@menu/main_bible_drawer_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
