--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -4,17 +4,19 @@
 -->
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fadingEdgeLength="0sp"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="false">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:gravity="bottom"
+        android:orientation="vertical"
+        >
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -68,7 +70,7 @@
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
                         android:layout_height="fill_parent"
-                        android:contentDescription="@string/menu"
+                        android:contentDescription="@string/strongs"
                         android:onClick="onStrongsButtonClick"
                         app:srcCompat="@drawable/ic_code_white_24dp" />
 
@@ -77,39 +79,46 @@
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
                         android:layout_height="fill_parent"
-                        android:contentDescription="@string/menu"
+                        android:contentDescription="@string/doc_type_bible"
                         android:onClick="onBibleButtonClick"
-                        android:text="Bible" />
+                        />
 
                     <Button
                         android:id="@+id/commentaryButton"
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
                         android:layout_height="fill_parent"
-                        android:contentDescription="@string/menu"
+                        android:contentDescription="@string/doc_type_commentary"
                         android:onClick="onCommentaryButtonClick"
-                        android:text="Com" />
+                        />
 
                     <Button
                         android:id="@+id/dictionaryButton"
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
                         android:layout_height="fill_parent"
-                        android:contentDescription="@string/menu"
+                        android:contentDescription="@string/doc_type_dictionary"
                         android:onClick="onDictionaryButtonClick"
-                        android:text="Dict" />
+                        />
                 </LinearLayout>
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
-
         <LinearLayout
             android:id="@+id/mainBibleView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" />
 
-
     </LinearLayout>
+    <net.bible.android.view.util.widget.SpeakTransportWidget
+        android:id="@+id/speakTransport"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:gravity="bottom"
+        custom:hideStatus="true"
+        android:theme="@style/MainBibleViewTransport"
+        />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
