--- a/app/src/main/res/values/barstyles.xml
+++ b/app/src/main/res/values/barstyles.xml
@@ -45,6 +45,10 @@
 		<item name="windowNoTitle">true</item>
 	</style>
 
+	<style name="MainBibleViewTransport">
+		<item name="android:colorBackground">#80b46464</item>
+	</style>
+
 	<!-- Custom left title text -->
 	<style name="BibleTitle1" parent="ActionBarTitle">
 		<item name="android:textSize">15sp</item>
