--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -5,18 +5,19 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fadingEdgeLength="0sp"
     android:fitsSystemWindows="false">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="bottom"
         android:orientation="vertical"
-        >
+        android:id="@+id/relativeLayout">
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -26,7 +27,9 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="4dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -37,7 +40,7 @@
                         android:id="@+id/homeButton"
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="fill_parent"
+                        android:layout_height="wrap_content"
                         android:contentDescription="@string/menu"
                         android:onClick="onHomeButtonClick"
                         app:srcCompat="@drawable/ic_menu" />
@@ -45,7 +48,7 @@
                     <LinearLayout
                         android:id="@+id/pageTitleContainer"
                         android:layout_width="wrap_content"
-                        android:layout_height="fill_parent"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="start|center_vertical"
                         android:onClick="onPageTitleClick"
                         android:orientation="vertical">
@@ -69,7 +72,7 @@
                         android:id="@+id/strongsButton"
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="fill_parent"
+                        android:layout_height="wrap_content"
                         android:contentDescription="@string/strongs"
                         android:onClick="onStrongsButtonClick"
                         app:srcCompat="@drawable/ic_code_white_24dp" />
@@ -78,47 +81,47 @@
                         android:id="@+id/bibleButton"
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="fill_parent"
+                        android:layout_height="match_parent"
                         android:contentDescription="@string/doc_type_bible"
-                        android:onClick="onBibleButtonClick"
-                        />
+                        android:onClick="onBibleButtonClick" />
 
                     <Button
                         android:id="@+id/commentaryButton"
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="fill_parent"
+                        android:layout_height="match_parent"
                         android:contentDescription="@string/doc_type_commentary"
-                        android:onClick="onCommentaryButtonClick"
-                        />
+                        android:onClick="onCommentaryButtonClick" />
 
                     <Button
                         android:id="@+id/dictionaryButton"
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="fill_parent"
+                        android:layout_height="match_parent"
                         android:contentDescription="@string/doc_type_dictionary"
-                        android:onClick="onDictionaryButtonClick"
-                        />
+                        android:onClick="onDictionaryButtonClick" />
                 </LinearLayout>
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
+
         <LinearLayout
             android:id="@+id/mainBibleView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintBottom_toTopOf="@+id/speakTransport"
+            />
 
-    </LinearLayout>
-    <net.bible.android.view.util.widget.SpeakTransportWidget
-        android:id="@+id/speakTransport"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:gravity="bottom"
-        custom:hideStatus="true"
-        android:theme="@style/MainBibleViewTransport"
-        />
+        <net.bible.android.view.util.widget.SpeakTransportWidget
+            android:id="@+id/speakTransport"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            custom:hideStatus="true" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
