--- a/app/src/main/res/layout/speak_transport_widget.xml
+++ b/app/src/main/res/layout/speak_transport_widget.xml
@@ -38,7 +38,7 @@
 
         <LinearLayout
             android:id="@+id/button_panel"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
