--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -5,7 +5,6 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,8 +27,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="4dp">
+                >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -65,14 +63,22 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_alignParentEnd="true">
 
+                    <ImageButton
+                        android:id="@+id/speakButton"
+                        style="@style/Widget.AppCompat.ActionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:contentDescription="@string/strongs"
+                        android:onClick="onSpeakButtonClick"
+                        app:srcCompat="@drawable/ic_hearing_24dp" />
                     <ImageButton
                         android:id="@+id/strongsButton"
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:contentDescription="@string/strongs"
                         android:onClick="onStrongsButtonClick"
                         app:srcCompat="@drawable/ic_code_white_24dp" />
