--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -38,7 +38,7 @@
                         android:id="@+id/homeButton"
                         style="@style/Widget.AppCompat.ActionButton"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:contentDescription="@string/menu"
                         android:onClick="onHomeButtonClick"
                         app:srcCompat="@drawable/ic_menu" />
@@ -66,7 +66,9 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_alignParentEnd="true">
+                    android:layout_alignParentEnd="true"
+                    android:theme="@style/MainBibleActionBarButtons"
+                    >
 
                     <ImageButton
                         android:id="@+id/speakButton"
@@ -76,17 +78,6 @@
                         android:contentDescription="@string/strongs"
                         android:onClick="onSpeakButtonClick"
                         app:srcCompat="@drawable/ic_hearing_24dp" />
-
-                    <Button
-                        android:id="@+id/strongsButton"
-                        style="@style/Widget.AppCompat.ActionButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:contentDescription="@string/strongs"
-                        android:onClick="onStrongsButtonClick"
-                        android:textSize="12sp"
-                        android:textStyle="italic"
-                        android:text="nnnn" />
 
                     <Button
                         android:id="@+id/bibleButton"
