--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -121,7 +121,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            custom:hideStatus="true" />
+            custom:hideStatus="false" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
